--- a/feature_supervisor_research/src/main/res/layout/fragment_add_new_task.xml
+++ b/feature_supervisor_research/src/main/res/layout/fragment_add_new_task.xml
@@ -47,12 +47,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTaskFloatingButton"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/ic_plus_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/brand_yellow"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
+        app:srcCompat="@drawable/ic_plus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
