--- a/feature_administrator/src/main/res/layout/fragment_add_supervisor.xml
+++ b/feature_administrator/src/main/res/layout/fragment_add_supervisor.xml
@@ -159,7 +159,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailNumberEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/facultyEditText" />
 
     <TextView
         android:id="@+id/errorTextView"
@@ -177,6 +177,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Додати"
+        android:backgroundTint="@color/brand_yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/errorTextView" />
