--- a/feature_administrator/src/main/res/layout/item_supervisor.xml
+++ b/feature_administrator/src/main/res/layout/item_supervisor.xml
@@ -26,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
